adding files, updating styles

--- a/dashboard/src/assets/scss/_variables.scss
+++ b/dashboard/src/assets/scss/_variables.scss
@@ -643,7 +643,8 @@ $headings-font-family:        null !default;
 $headings-font-style:         null !default;
 $headings-font-weight:        700 !default;
 $headings-line-height:        1.2 !default;
-$headings-color:              #25396f !default;
+// Change heading title color here
+$headings-color:              #6f2563 !default;
 
 // scss-docs-start display-headings
 $display-font-sizes: (
