added middleware m, do not know if code is correct

--- a/dashboard/src/layouts/sidebar.html
+++ b/dashboard/src/layouts/sidebar.html
@@ -138,6 +138,10 @@
                             <input class="form-check-input" type="checkbox" id="middleware2">
                             <label class="form-check-label" for="middleware2">Enable Middleware 2 (v, not parsed)</label>
                         </div>
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="middleware3">
+                            <label class="form-check-label" for="middleware3">Enable Middleware 3 (m, not parsed)</label>
+                        </div>
                     </div>
                 </li>
             </ul>
